from users.

An ability to store and load sets of search information under profiles
was added to the "Find/add" dialog.

IRC search only by e-mail without channel specification was added.

A segfault was fixed in the MSN part. It happened when a hotmail box was
cleared entirely through their web interface.

4.7.7
-----

Centericq now compiles well with the new 3.1 version of GCC compiler.

Fixed a bug resulted into incorrect recipient choosing after performing
mass history message forward from the chat mode.

The "Channel manager" dialog was extended so that it allowed to chat on
IRC channels. To add a channel to the list you have to set "Show on the
contact list" for it.

ICQ events sent to users with status "Occupied" or "DND" were lost.
Fixed. Missed the workaround in the libicq2000.

The cicqsync script now refuses to work with CVS version <= 1.10

Bugs in the Yahoo! engine were fixed. They resulted into adding contacts
with strange names to the list. Eventually the Yahoo! support in
centericq became unusable because of some minor changes in the contact
list transmission protocol part. It was a really stupid bug of the Yahoo
library the program uses, and I immediately fixed it.

In the IRC module there was a problem with not detecting the case of
inability to join a channel, and it also was silent when a user was
kicked. Fixed, so that now it's detected and reported to the contact
list.

4.7.8
-----

Fixed a segfault in the Yahoo! module.

Now the source should compile well on Solaris OS. Thanks to Jochen
Kmietsch <jochen.kmietsch@tu-clausthal.de> for initial portings efforts
and to Lion Templin <lion@leonine.com> for providing an account on a
Solaris box.

Fixed a possible buffer overflow in the MSN e-mail notification
processing code of the respective module. Thanks to KF
<dotslash@snosoft.com> for finding and reporting it.

The cicqconv migration script now does also support micq. Thanks to
Artur Komarov <artur@emd.ru>