@@ -1,4 +1,4 @@
-EXTRA_DIST = acconfig.h centericq.1 ABOUT-NLS AUTHORS COPYING ChangeLog FAQ INSTALL NEWS README TODO THANKS centericq.spec
+EXTRA_DIST = acconfig.h centericq.1 ABOUT-NLS AUTHORS ChangeLog COPYING FAQ INSTALL NEWS README THANKS TODO centericq.spec
 SUBDIRS = intl po contrib misc share src
 AUTOMAKE_OPTIONS = foreign
 man_MANS = centericq.1
