@@ -1,46 +1,48 @@
+src/hooks/abstracthook.cc
+src/hooks/aimhook.cc
+src/hooks/icqhook.cc
+src/hooks/irchook.cc
+src/hooks/msnhook.cc
+src/hooks/yahoohook.cc
+src/accountmanager.cc
 src/centericq.cc
 src/centermain.cc
+src/eventmanager.cc
 src/icqconf.cc
 src/icqcontact.cc
 src/icqcontacts.cc
 src/icqdialogs.cc
 src/icqface.cc
-src/icqmlist.cc
 src/icqgroup.cc
 src/icqgroups.cc
+src/icqhist.cc
+src/icqmlist.cc
 src/imcontact.cc
-src/accountmanager.cc
 src/imcontroller.cc
-src/hooks/abstracthook.cc
-src/hooks/icqhook.cc
-src/hooks/yahoohook.cc
-src/hooks/msnhook.cc
 src/imevents.cc
-src/eventmanager.cc
-src/imlogger.cc
 src/imexternal.cc
-src/hooks/aimhook.cc
-src/hooks/irchook.cc
+src/imlogger.cc
 acconfig.h
+src/hooks/abstracthook.h
+src/hooks/aimhook.h
+src/hooks/icqhook.h
+src/hooks/irchook.h
+src/hooks/msnhook.h
+src/hooks/yahoohook.h
+src/accountmanager.h
 src/centericq.h
+src/eventmanager.h
 src/icqcommon.h
 src/icqconf.h
 src/icqcontact.h
 src/icqcontacts.h
 src/icqface.h
-src/icqmlist.h
 src/icqgroup.h
 src/icqgroups.h
-src/accountmanager.h
+src/icqhist.h
+src/icqmlist.h
 src/imcontact.h
 src/imcontroller.h
-src/hooks/abstracthook.h
-src/hooks/icqhook.h
-src/hooks/yahoohook.h
-src/hooks/msnhook.h
 src/imevents.h
-src/eventmanager.h
-src/imlogger.h
 src/imexternal.h
-src/hooks/aimhook.h
-src/hooks/irchook.h
+src/imlogger.h
