@@ -1,10 +1,11 @@
-INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/hooks -I/home/konst/devel/kktoolbox/kkstrtext -I/home/konst/devel/kktoolbox/kkconsui/include -I/home/konst/devel/kktoolbox/kksystr/include -I/home/konst/devel/libyahoo -I/home/konst/devel/libmsn -I/home/konst/devel/libicq2000/include -I/home/konst/devel/libicq2000 -I/home/konst/devel/firetalk -I$(top_srcdir)/intl
+INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/hooks -I/home/konst/devel/kktoolbox/kkconsui -I/home/konst/devel/kktoolbox/kkconsui/include -I/home/konst/devel/kktoolbox/kkconsui/../kkstrtext -I/home/konst/devel/kktoolbox/kkconsui/../kkstrtext-0.1 -I/home/konst/devel/kktoolbox/kkstrtext -I/home/konst/devel/kktoolbox/kksystr -I/home/konst/devel/kktoolbox/kksystr/include -I/home/konst/devel/kktoolbox/kksystr/../kkstrtext-0.1 -I/home/konst/devel/kktoolbox/kksystr/../kkstrtext -I/home/konst/devel/libicq2000 -I/home/konst/devel/libmsn -I/home/konst/devel/libyahoo -I/home/konst/devel/firetalk -I$(top_srcdir)/intl
+CPPFLAGS = -DDEBUG
 bin_PROGRAMS = centericq
-centericq_SOURCES = centericq.cc centermain.cc icqconf.cc icqcontact.cc icqcontacts.cc icqdialogs.cc icqface.cc icqmlist.cc icqgroup.cc icqgroups.cc imcontact.cc accountmanager.cc imcontroller.cc imevents.cc eventmanager.cc imlogger.cc imexternal.cc
-centericq_LDFLAGS = -L/home/konst/devel/kktoolbox/kkstrtext -L/home/konst/devel/kktoolbox/kkconsui -L/home/konst/devel/kktoolbox/kksystr -L/home/konst/devel/libyahoo -L/home/konst/devel/libmsn -L/home/konst/devel/libicq2000 -L/home/konst/devel/firetalk
-centericq_LDADD = $(top_srcdir)/src/hooks/libhooks.a -lkkstrtext -lkkconsui -lkksystr -llibyahoo -llibmsn -llibicq2000 -lfiretalk @LIBS@ @INTLLIBS@
+centericq_SOURCES = accountmanager.cc centericq.cc centermain.cc eventmanager.cc icqconf.cc icqcontact.cc icqcontacts.cc icqdialogs.cc icqface.cc icqgroup.cc icqgroups.cc icqhist.cc icqmlist.cc imcontact.cc imcontroller.cc imevents.cc imexternal.cc imlogger.cc
+centericq_LDFLAGS = -L/home/konst/devel/kktoolbox/kkconsui -L/home/konst/devel/kktoolbox/kkstrtext -L/home/konst/devel/kktoolbox/kksystr -L/home/konst/devel/libicq2000 -L/home/konst/devel/libmsn -L/home/konst/devel/libyahoo -L/home/konst/devel/firetalk
+centericq_LDADD = $(top_srcdir)/src/hooks/libhooks.a -lkkconsui -lkkstrtext -lkksystr -llibicq2000 -llibmsn -llibyahoo -lfiretalk @LIBS@ @INTLLIBS@
 SUBDIRS = hooks
-EXTRA_DIST = centericq.cc centermain.cc icqconf.cc icqcontact.cc icqcontacts.cc icqdialogs.cc icqface.cc icqmlist.cc icqgroup.cc icqgroups.cc imcontact.cc accountmanager.cc imcontroller.cc imevents.cc eventmanager.cc imlogger.cc imexternal.cc centericq.h icqcommon.h icqconf.h icqcontact.h icqcontacts.h icqface.h icqmlist.h icqgroup.h icqgroups.h accountmanager.h imcontact.h imcontroller.h imevents.h eventmanager.h imlogger.h imexternal.h
+EXTRA_DIST = accountmanager.cc centericq.cc centermain.cc eventmanager.cc icqconf.cc icqcontact.cc icqcontacts.cc icqdialogs.cc icqface.cc icqgroup.cc icqgroups.cc icqhist.cc icqmlist.cc imcontact.cc imcontroller.cc imevents.cc imexternal.cc imlogger.cc accountmanager.h centericq.h eventmanager.h icqcommon.h icqconf.h icqcontact.h icqcontacts.h icqface.h icqgroup.h icqgroups.h icqhist.h icqmlist.h imcontact.h imcontroller.h imevents.h imexternal.h imlogger.h
 AUTOMAKE_OPTIONS = foreign
 AM_CPPFLAGS = -DSHARE_DIR=\"$(pkgdatadir)\" -DLOCALEDIR=\"$(datadir)/locale\" @SIGC_CFLAGS@
 LDFLAGS = @SIGC_LIBS@
