@@ -1,4 +1,5 @@
-INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/hooks -I/home/konst/devel/kktoolbox/kkstrtext -I/home/konst/devel/kktoolbox/kkconsui/include -I/home/konst/devel/kktoolbox/kksystr/include -I/home/konst/devel/libyahoo -I/home/konst/devel/libmsn -I/home/konst/devel/libicq2000/include -I/home/konst/devel/libicq2000 -I/home/konst/devel/firetalk -I$(top_srcdir)/intl
+INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/hooks -I/home/konst/devel/kktoolbox/kkconsui -I/home/konst/devel/kktoolbox/kkconsui/include -I/home/konst/devel/kktoolbox/kkconsui/../kkstrtext -I/home/konst/devel/kktoolbox/kkconsui/../kkstrtext-0.1 -I/home/konst/devel/kktoolbox/kkstrtext -I/home/konst/devel/kktoolbox/kksystr -I/home/konst/devel/kktoolbox/kksystr/include -I/home/konst/devel/kktoolbox/kksystr/../kkstrtext-0.1 -I/home/konst/devel/kktoolbox/kksystr/../kkstrtext -I/home/konst/devel/libicq2000 -I/home/konst/devel/libmsn -I/home/konst/devel/libyahoo -I/home/konst/devel/firetalk -I$(top_srcdir)/intl
+CPPFLAGS = -DDEBUG
 noinst_LIBRARIES = libhooks.a
-libhooks_a_SOURCES = abstracthook.cc icqhook.cc yahoohook.cc msnhook.cc aimhook.cc irchook.cc
-EXTRA_DIST = abstracthook.cc icqhook.cc yahoohook.cc msnhook.cc aimhook.cc irchook.cc abstracthook.h icqhook.h yahoohook.h msnhook.h aimhook.h irchook.h
+libhooks_a_SOURCES = abstracthook.cc aimhook.cc icqhook.cc irchook.cc msnhook.cc yahoohook.cc
+EXTRA_DIST = abstracthook.cc aimhook.cc icqhook.cc irchook.cc msnhook.cc yahoohook.cc abstracthook.h aimhook.h icqhook.h irchook.h msnhook.h yahoohook.h
